fix: remove bg fix on iphone,ipad

--- a/pages/main/styles.css
+++ b/pages/main/styles.css
@@ -875,11 +875,6 @@ h6 {
   width: 100%;
   padding-top: 85px;
   background: url("../../assets/images/bg-start.jpg") center/cover no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
 }
 .start .start__wrapper {
   width: 100%;
@@ -994,11 +989,6 @@ h6 {
 .sunset {
   width: 100%;
   background: url("../../assets/images/bg-sunset.jpg") center/cover no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
 }
 .sunset .sunset__wrapper {
   width: 100%;
@@ -1124,11 +1114,6 @@ h6 {
 .monstera {
   width: 100%;
   background: url("../../assets/images/monstera.jpg") center/cover no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
 }
 .monstera .monstera__wrapper {
   width: 100%;
@@ -1249,11 +1234,6 @@ h6 {
 .starfall {
   width: 100%;
   background: url("../../assets/images/starfall.jpg") center/cover no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
 }
 .starfall .starfall__wrapper {
   width: 100%;
