--- a/sass/pages/_main.scss
+++ b/sass/pages/_main.scss
@@ -12,11 +12,6 @@
   width: 100%;
   padding-top: 85px;
   background: url("../../assets/images/bg-start.jpg") center / cover no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
   @extend %amination-fadeIn-second;
 
   .start__wrapper {
@@ -34,7 +29,6 @@
     .content {
       text-align: center;
       flex-direction: column;
-      //padding: 466px 0 41px;
       padding: 407px 0 41px;
       overflow: hidden;
 
@@ -151,11 +145,6 @@
 .sunset {
   width: 100%;
   background: url("../../assets/images/bg-sunset.jpg") center / cover no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
 
   .sunset__wrapper {
     width: 100%;
@@ -315,12 +304,7 @@
 .monstera {
   width: 100%;
   background: url("../../assets/images/monstera.jpg") center / cover no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  
+
   .monstera__wrapper {
     width: 100%;
     max-width: $content-width;
@@ -464,12 +448,7 @@
 .starfall {
   width: 100%;
   background: url("../../assets/images/starfall.jpg") center / cover no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  
+
   .starfall__wrapper {
     width: 100%;
     max-width: $content-width;
@@ -480,6 +459,7 @@
     @media only screen and (max-width: $breakpoints_desktop) {
     }
   }
+
   .starfall__container {
     .content {
       text-align: right;
